[package]
authors = ["Spanfile <spansdev@gmail.com>"]
description = "Common objects and utilities used by the Modtorio server and clients."
edition = "2018"
name = "common"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"

[dependencies.serde]
features = ["derive"]
version = "1.0.114"

[dev-dependencies]
serde_json = "1.0.57"
