[package]
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"
name = "modtorio"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"
serde_json = "1.0.56"
serde_with = "1.4.0"
glob = "0.3.0"
regex = "1.3.9"
lazy_static = "1.4.0"
log = "0.4.11"
url = "2.1.1"
bytes = "0.5.6"
envy = "0.4.1"
dotenv = "0.15.0"
async-trait = "0.1.36"
tempfile = "3.1.0"
bytesize = "1.0.1"
strum = "0.18.0"
strum_macros = "0.18.0"
blake2 = "0.9.0"
sha-1 = "0.9.1"
hex = "0.4.2"
thiserror = "1.0.20"
# futures = "0.3.5"
zip = "0.5.6"

[dependencies.macros]
path = "../macros"

[dependencies.derive]
path = "../derive"

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

# [dependencies.zip]
# git = "ssh://git@git.spans.me/Spanfile/zip-rs"

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]

[dependencies.tokio]
version = "0.2.21"
features = ["rt-threaded", "sync", "macros", "fs", "blocking"]

[dependencies.chrono]
version = "0.4.13"
features = ["serde"]

[dependencies.rusqlite]
version = "0.23.1"
features = ["chrono"]

[dependencies.digest]
version = "0.9.0"
features = ["alloc", "std"]
