[package]
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"
name = "modtorio"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"
async-trait = "0.1.36"
blake2 = "0.9.0"
bytes = "0.5.6"
bytesize = "1.0.1"
dotenv = "0.15.0"
envy = "0.4.1"
fern = "0.6.0"
glob = "0.3.0"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.3.9"
serde_json = "1.0.56"
sha-1 = "0.9.1"
strum = "0.19.1"
strum_macros = "0.19.1"
tempfile = "3.1.0"
thiserror = "1.0.20"
toml = "0.5.6"
tonic = "0.3.0"
url = "2.1.1"
zip = "0.5.6"

[dependencies.derive]
path = "../derive"

[dependencies.common]
path = "../common"

[dependencies.rpc]
path = "../rpc"

[dependencies.serde]
features = ["derive"]
version = "1.0.114"

[dependencies.reqwest]
features = ["json"]
version = "0.10.6"

[dependencies.tokio]
features = ["rt-threaded", "sync", "macros", "fs", "blocking"]
version = "0.2.21"

[dependencies.chrono]
features = ["serde"]
version = "0.4.13"

[dependencies.rusqlite]
features = ["chrono"]
version = "0.23.1"

[dependencies.digest]
features = ["alloc", "std"]
version = "0.9.0"

[dependencies.clap]
default-features = false
version = "2.33.1"

[build-dependencies]
blake2 = "0.9.0"
hex = "0.4.2"

[build-dependencies.digest]
features = ["alloc", "std"]
version = "0.9.0"
