[package]
authors = ["Spanfile <spansdev@gmail.com>"]
description = "RPC transport for Modtorio"
edition = "2018"
name = "rpc"
version = "0.1.0"

[dependencies]
anyhow = "1.0.32"
log = "0.4.11"
prost = "0.6.1"
tonic = "0.3.0"

[dependencies.common]
path = "../common"

[dependencies.tokio]
features = ["macros"]
version = "0.2.22"

[build-dependencies]
tonic-build = "0.3.0"
