[package]
authors = ["Spanfile <spansdev@gmail.com>"]
description = "RPC protocol buffer specification for Modtorio"
edition = "2018"
name = "rpc"
version = "0.1.0"

[dependencies]
log = "0.4.11"
prost = "0.6.1"
tonic = {version = "0.3.1", features = ["prost"]}

[build-dependencies]
tonic-build = "0.3.1"
